# agentlens

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_agent.py  langchain_agent.py  langchain_basic.py  raw_openai_client.py  trip_planner_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DurationBar.tsx  JsonViewer.tsx  Layout.tsx  Modal.tsx  ReplaySpanDiff.tsx  ReplayView.tsx  SpanDetailPanel.tsx  SpanEditor.tsx  SpanKindIcon.tsx  SpanTimeline.tsx  SpanTimelineItem.tsx  StatusBadge.tsx  TraceDetail.tsx  TraceList.tsx  TraceListRow.tsx
frontend/src/context/: TraceDetailContext.tsx
frontend/src/hooks/: useKeyboardNav.ts  useReplay.ts  useTrace.ts  useTraces.ts
frontend/src/lib/: format.ts  spans.ts
frontend/src/types/: index.ts
src/agentlens/: __init__.py  cli.py
src/agentlens/integrations/: __init__.py  _base.py  clients.py  crewai.py  langchain.py  openai_agents.py
src/agentlens/replay/: context.py  engine.py  live.py  span_replay.py
src/agentlens/sdk/: decorators.py  models.py  recorder.py  tracer.py
src/agentlens/server/: app.py  db.py
src/agentlens/server/routes/: replay.py  traces.py
