[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "Local-first AI agent debugger with fork & replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "mypy",
    "ruff",
]

[project.scripts]
agentlens = "agentlens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[tool.hatch.build]
artifacts = ["src/agentlens/server/static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
